--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ deployJar {
             uri = 'http://localhost:9082/api/v3'
             nid = 0x3
         }
+        berlin {
+            uri = 'https://berlin.net.solidwallet.io/api/v3'
+            nid = 0x7
+        }
     }
     keystore = rootProject.hasProperty('keystoreName') ? "$keystoreName" : '../keystore_gochain'
     password = rootProject.hasProperty('keystorePass') ? "$keystorePass" : 'gochain'
